# hc190aop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: account.rs  engine.rs  error.rs  lib.rs  main.rs  reader.rs  store.rs  transaction.rs  writer.rs
src/application/: engine.rs  mod.rs
src/domain/: account.rs  mod.rs  ports.rs  transaction.rs
src/infrastructure/: in_memory.rs  mod.rs  rocksdb.rs
src/interfaces/csv/: account_writer.rs  mod.rs  transaction_reader.rs
tests/: boundary_tests.rs  cli_test.rs  dispute_tests.rs  dynamic_dispatch_test.rs  factory_port_test.rs  fallback_test.rs  generator_test.rs  performance_tests.rs  persistence_test.rs  robustness_tests.rs  sharded_router_test.rs
tests/common/: mod.rs
