[package]
name = "hc190aop"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
miette = { version = "7.6.0", features = ["fancy"] }
rust_decimal = { version = "1.40.0", features = ["serde"] }
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
proptest = "1.9.0"
serde_json = "1.0.149"
tempfile = "3.24.0"
