[package]
name = "hc190aop"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
miette = { version = "7.6.0", features = ["fancy"] }
rocksdb = "0.24.0"
rust_decimal = { version = "1.40.0", features = ["serde"] }
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tempfile = "3.24.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
rand = "0.8"
serde_json = "1.0.149"
